# azz

./: .envrc.example  .gitignore  CHANGELOG.md  Containerfile  README.md  justfile  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
src/azz/: __main__.py  app.py  logging.py
src/azz/core/: editor.py  engine.py  engine_config.py  iteration_path.py  runner.py  timebox.py  wiql.py
src/azz/core/work_item/: __init__.py  helper.py  work_item.py  work_item_filter.py  work_item_state.py  work_item_type.py
